# chess-analyzer

./: .chat-context.md  .gitignore  Cargo.toml  chess_analyzer.db  ctx.md
.ctx/: .gitignore  context.json
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/engine/: stockfish.rs
crates/core/src/lichess/: client.rs  mod.rs  types.rs
crates/core/src/parser/: mod.rs  pgn.rs
crates/core/src/patterns/: detector.rs  mod.rs  types.rs
crates/core/src/storage/: db.rs  mod.rs  models.rs
crates/core/src/training/: coordinates.rs  mod.rs  openings.rs  visualization.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
crates/web/src/routes/: mod.rs  training.rs
crates/web/static/css/: main.css
crates/web/static/js/: coordinates.js  puzzles.js
crates/web/templates/: base.html  games.html  index.html  patterns.html
crates/web/templates/training/: coordinates.html  index.html  openings.html  puzzles.html  visualization.html
data/: sample.pgn
src/: lib.rs  main.rs
src/engine/: analysis.rs  mod.rs
src/parser/: pgn.rs
