[package]
name = "chess-analyzer-core"
version = "0.1.0"
edition = "2021"

[dependencies]
pgn-reader = "0.29.0"
shakmaty = "0.30.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
