[package]
name = "chess-analyzer-web"
version = "0.1.0"
edition = "2021"

[dependencies]
chess-analyzer-core = { path = "../core" }
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
